# log_graph_parser

./: pyproject.toml
data/: test.csv
notebooks/: log_kg.ipynb
ontologies/: sepses_logs.ttl  slogert.ttl
