[project]
name = "log-graph-parser"
version = "0.1.0"
description = ""
authors = [
    {name = "Luca Cotti",email = "lucacotti@outlook.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13,<4.0.0"
dependencies = [
    "rdflib (>=7.1.3,<8.0.0)",
    "langchain (>=0.3.20,<0.4.0)",
    "langchain-neo4j (>=0.4.0,<0.5.0)",
    "langchain-ollama (>=0.2.3,<0.3.0)",
    "langchain-experimental (>=0.3.4,<0.4.0)",
    "neo4j (>=5.28.1,<6.0.0)",
    "pandas (>=2.2.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
